--- a/config/src/main/resources/shared/application.yml
+++ b/config/src/main/resources/shared/application.yml
@@ -13,8 +13,8 @@ hystrix:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://registry:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 spring:
   rabbitmq:
-    host: rabbitmq
+    host: localhost
